added files correspondent to devTo article

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "files.associations": {
         "string": "cpp",
         "iostream": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "utility": "cpp",
+        "vector": "cpp",
+        "map": "cpp",
+        "iosfwd": "cpp",
+        "set": "cpp"
     }
 }
